src/test/ui/deriving/deriving-enum-as-repr-bad.stderr
error[FIXME]: `AsRepr` can only be derived for enums
  --> $DIR/deriving-enum-as-repr-bad.rs:12:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for enums with an explicit integer representation
  --> $DIR/deriving-enum-as-repr-bad.rs:16:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for enums with an explicit integer representation
  --> $DIR/deriving-enum-as-repr-bad.rs:24:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:31:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:39:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:47:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:55:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

